# diegoarmstrong.com

./: README.md
config/: aesthetics.toml  styles-template.css
content/: styles.css
content/blog/: testblog.html
content/html/blog/: test-blog1.html
content/markdown/: index.md
content/markdown/blog/: a-review-of-white-nights.md  test-post.md
content/served/: index.html
docs/: index.html  styles.css
docs/blogs/: a-review-of-white-nights.html  test-blog1.html  test-post.html
markdown/blog/: testblog.md
static-site-generator/: Cargo.toml
static-site-generator/src/: cli.rs  config.rs  content_manager.rs  lib.rs  main.rs
